Bug #88315 --> fix the default selection for the auto complete widget to make it match 4.x r=ducarroz sr=hewitt